# SoftUd

./: CMakeLists.txt  Database.cpp  Database.h  Fjende.cpp  Fjende.h  FjendeFactory.cpp  FjendeFactory.h  GameMaster.cpp  GameMaster.h  Grotte.cpp  Grotte.h  GrotteFactory.cpp  GrotteFactory.h  Hero.cpp  Hero.h  Karakter.cpp  Karakter.h  Soft_1.cpp  Soft_1.h  Våben.cpp  Våben.h  main.cpp  schema.txt  spil.db
